--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@ layout: default
 title: "About"
 ---
 
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
+I'm a PhD student at [Macquarie university]{https://mq.edu.au} under the supervision of [Steve Lack]{http://maths.mq.edu.au/~slack/}.
+
+This webpage is under construction
