--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: "About"
 
 I'm a PhD student at [Macquarie university](https://mq.edu.au) under the supervision of [Steve Lack](http://maths.mq.edu.au/~slack/).
 
-This webpage is under construction
+This webpage is under construction.
