--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: page
 title: "About"
 ---
 
-I'm a PhD student at [Macquarie university]({https://mq.edu.au}) under the supervision of [Steve Lack](http://maths.mq.edu.au/~slack/).
+I'm a PhD student at <a href="https://mq.edu.au">Macquarie University</a> under the supervision of [Steve Lack](http://maths.mq.edu.au/~slack/).
 
 This webpage is under construction.
